k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  labels:
    name: petclinic
    environment: production
